--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,6 +28,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
   
 }
+li{
+  list-style: none;
+}
+a{
+  text-decoration: none;
+}
 .purple{
   color: var(--purple);
 }
