Se agregaron las funciones para cambiar el estado de complete de una tarea y eliminar una tarea. En el buscador hay un detalle a solucionar

--- a/src/styles/Todo.css
+++ b/src/styles/Todo.css
@@ -28,3 +28,10 @@
 .todo_delete:hover{
   color: rgb(197, 26, 26);
 }
+
+.green_completed{
+  color: greenyellow;
+}
+.red_uncompleted{
+  color: red;
+}
