--- a/src/styles/NewToDo.css
+++ b/src/styles/NewToDo.css
@@ -15,6 +15,9 @@
   border: none;
   border-radius: 15px;
   background-color: var(--blue-dark);
+  color: var(--white);
+  font-size: 1.8rem;
+  font-weight: bold;
 }
 .btn_container{
   width: 100%;
@@ -32,13 +35,13 @@
   background-color: transparent;
 }
 .btn_cancel{
-  border: 1px solid var(--white);
+  border: 1px solid var(--blue-dark);
   background-color: var(--blue-dark);
   color: white;
   font-weight: bold;
 }
 .btn_add{
-  border: 1px solid var(--white);
+  border: 1px solid transparent;
   background-color: var(--purple);
   color: white;
   font-weight: bold;
