--- a/src/styles/BtnNewTodo.css
+++ b/src/styles/BtnNewTodo.css
@@ -5,10 +5,27 @@
   border-radius: 50% 50%;
   background-color: var(--purple);
   box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.5);
-
 }
 .btn_newtodo i{
   font-size: 1.5rem;
   font-weight: bold;
   color: var(--white);
+}
+
+.giro {
+  display: inline-block;
+  transition: transform 0.3s ease;
+}
+
+.giro:hover {
+  transform: rotate(180deg);
+}
+
+.giro i {
+  display: block;
+}
+
+.giro:hover i {
+  content: "O";
+  font-size: 24px;
 }
